--- a/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
+++ b/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
@@ -16,52 +16,13 @@
   background-color: #fff;
   color: #030303;
 
-  .cancel-btn {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background:
-      url("https://img.icons8.com/ios/50/000000/delete-sign.png")
-      no-repeat;
-    background-position: 7.5px 7px;
-    background-size: 15px;
-    background-color: rgba(0, 0, 0, 0.08);
-    align-self: flex-end;
-    margin: 15px 15px 0;
-    cursor: pointer;
-  }
 
-  .login-menu_header {
-    width: 555px;
-    font-size: 32px;
-    font-weight: bold;
-    line-height: 1.34;
-    text-align: center;
-  }
-
-  .login-menu_par {
-    width: 323px;
-    height: 44px;
-    font-size: 14px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.57;
-    letter-spacing: normal;
-    text-align: center;
-    color: #33333a;
-    margin-top: 20px;
-  }
 
   &_form {
-    display: flex;
-    margin-top: 40px;
+    //display: flex;
+    //margin-top: 40px;
 
-    .form-email_par {
-      width: 323px;
-      height: 22px;
-      font-size: 14px;
-    }
+
 
     &-fields {
       width: 396px;
@@ -76,11 +37,11 @@
       }
     }
 
-    .form-pass_par {
-      width: 323px;
-      height: 22px;
-      font-size: 14px;
-    }
+    //.form-pass_par {
+    //  width: 323px;
+    //  height: 22px;
+    //  font-size: 14px;
+    //}
   }
 
   .enter_btn {
@@ -113,6 +74,52 @@
     }
   }
 }
+
+.login-cancel-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background:
+          url("https://img.icons8.com/ios/50/000000/delete-sign.png")
+          no-repeat;
+  background-position: 7.5px 7px;
+  background-size: 15px;
+  background-color: rgba(0, 0, 0, 0.08);
+  align-self: flex-end;
+  margin: 15px 15px 0;
+  cursor: pointer;
+}
+
+.login-menu_header {
+  width: 555px;
+  font-size: 32px;
+  font-weight: bold;
+  line-height: 1.34;
+  text-align: center;
+}
+
+.login-menu_par {
+  width: 323px;
+  height: 44px;
+  font-size: 14px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  text-align: center;
+  color: #33333a;
+  margin-top: 20px;
+}
+
+.login-form-input-title {
+  width: 323px;
+  height: 22px;
+  font-size: 14px;
+}
+
+
+
 
 .d-none {
   display: none;
