--- a/client/src/components/TopBlockAuth/TopBlockAuth.scss
+++ b/client/src/components/TopBlockAuth/TopBlockAuth.scss
@@ -1,9 +1,9 @@
-.main-right {
+.header-right-block {
   display: flex;
   justify-content: flex-end;
 
   /* max-width: 450px; */
-  width: 60%;
+  //width: 60%;
 }
 
 .location-person,
@@ -29,9 +29,27 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 50px;
-  right: 316px;
+  top: 55px;
+  left: 15px;
   z-index: 1;
+  border: 1px solid #ccc;
+
+  &-item {
+    display: block;
+    height: 30px;
+    width: 120px;
+    font-size: 17px;
+    color: #000;
+    background-color: #fff;
+    padding-left: 5px;
+    padding-top: 5px;
+    text-transform: uppercase;
+    //border: 1px solid #ccc;
+  }
+
+  &-item:hover {
+    background-color: #eee;
+  }
 }
 
 .user-info-mini {
@@ -39,8 +57,47 @@
   align-items: center;
 }
 
+.user-name {
+  font-size: 18px;
+}
+
 .user-avatar-mini {
   display: inline-block;
+  position: relative;
+  height: 60px;
+  width: 60px;
+  cursor: pointer;
+  &-img {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.product-cart-ico {
+  position: relative;
+  display: inline-block;
+
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
+  &-img {
+    height: 100%;
+    width: 100%;
+  }
+
+  &-amount {
+    position: absolute;
+    //display: flex;
+    //justify-content: center;
+    //align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-40%, -80%);
+    color: #ff6008;
+    font-size: 18px;
+    font-weight: bold;
+
+  }
 }
 
 .d-none {
