Filters are ready including NavMenu and Empty State

--- a/client/src/components/EmptyState/empty-state.scss
+++ b/client/src/components/EmptyState/empty-state.scss
@@ -1,16 +1,18 @@
-@import '../../scss/resources/resources';
+@import "../../scss/resources/resources";
 
 .empty-state {
   height: 60vh;
+  width: 30vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
   &-title {
-    font-size: 40px;
-    line-height: 60px;
-    margin: 20px 0;
+    font-size: 18px;
+    line-height: 1.5;
+    margin: 30px 0;
+    text-align: center;
   }
 
   &-icon {
@@ -18,4 +20,14 @@
     font-size: 80px;
     margin: 20px 0;
   }
+}
+
+.cell {
+  border: 1px solid #eae6e6;
+  padding: 10px;
+}
+
+.filter-option-value {
+  color: #ff6008;
+  font-weight: 600;
 }
