--- a/client/src/components/FilteredProductList/Filters/ColorFilter/colorFilter.scss
+++ b/client/src/components/FilteredProductList/Filters/ColorFilter/colorFilter.scss
@@ -13,14 +13,15 @@
     flex-wrap: wrap;
 
     &-item {
+      // position: relative;
       margin-right: 24px;
       margin-bottom: 14px;
     }
 
     &-link {
-      // position: relative;
+      position: relative;
       display: inline-block;
-      background-color: red;
+      border: 2px solid #bfbbbb;
       width: 32px;
       height: 32px;
       -webkit-border-radius: 50%;
@@ -28,6 +29,21 @@
       border-radius: 50%;
       transition: all 0.3s ease;
       cursor: pointer;
+
+      &:after {
+        content: "";
+        display: block;
+        width: 7px;
+        height: 7px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        background-color: #ffffff;
+        opacity: 0;
+        transition: all 0.3s ease;
+      }
     }
   }
 }
@@ -37,39 +53,12 @@
   height: 0;
   width: 0;
   opacity: 0;
-}
 
-.filter-color-panel-link--selected {
-  width: 34px;
-  height: 34px;
-  position: relative;
-
-  &::before {
-    position: absolute;
-    content: "";
-    top: 5px;
-    left: 5px;
-    bottom: 5px;
-    right: 5px;
-    border-radius: 50%;
-    border: 2px solid #ffffff;
-  }
-}
-
-.filter-color-panel-link--selected-white {
-  width: 34px;
-  height: 34px;
-  position: relative;
-
-  &::before {
-    position: absolute;
-    content: "";
-    top: 5px;
-    left: 5px;
-    bottom: 5px;
-    right: 5px;
-    border-radius: 50%;
+  &:checked + .filter-color-panel-link {
     border: 2px solid #000000;
+    &:after {
+      opacity: 1;
+    }
   }
 }
 
