--- a/client/src/components/Search/Search.scss
+++ b/client/src/components/Search/Search.scss
@@ -2,6 +2,7 @@
 
 .main-search {
   width: 224px;
+  height: 36px;
   border-radius: 16px;
   background-color: #d8d8d8;
   padding: 4px 0 4px 19px;
