--- a/client/src/components/ProductPage/PhotoGallery/photo-gallery.scss
+++ b/client/src/components/ProductPage/PhotoGallery/photo-gallery.scss
@@ -15,7 +15,8 @@
   &-item {
     width: 68px;
     height: 68px;
-    margin-bottom: 20px;
+    margin: 20px;
+
 
     @include max-width($landscape-tablet) {
       margin-right: 12px;
@@ -40,7 +41,7 @@
     order: 1;
   }
 
-  img {
+  .all-photos-item {
     width: 100%;
     height: 100%;
     object-fit: contain;
