--- a/client/src/components/TopBlockAuth/TopBlockAuth.scss
+++ b/client/src/components/TopBlockAuth/TopBlockAuth.scss
@@ -1,9 +1,8 @@
 .header-right-block {
   display: flex;
   justify-content: flex-end;
-
-  /* max-width: 450px; */
-  //width: 60%;
+  align-items: center;
+  // width: 60%;
 }
 
 .location-person,
@@ -26,6 +25,9 @@
 }
 
 .header-dropdown-login-details {
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 25px;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -33,7 +35,7 @@
   left: 15px;
   z-index: 1;
   border: 1px solid #ccc;
-
+  box-shadow: 0, 0, 10px, 10px #ccc;
   &-item {
     display: block;
     height: 30px;
@@ -50,7 +52,10 @@
   &-item:hover {
     background-color: #eee;
   }
+  box-shadow: 0, 0, 10px, 10px #ccc;
 }
+
+
 
 .user-info-mini {
   display: flex;
