--- a/client/src/components/CategoryCarousel/CategoryCarousel.scss
+++ b/client/src/components/CategoryCarousel/CategoryCarousel.scss
@@ -36,15 +36,15 @@
       width: 47%;
     }
 
-    &:hover .category-img {
-      opacity: 0.4;
-    }
-
-    &:hover .category-link {
-      display: block;
+    &:hover {
+      .category-img {
+        opacity: 0.4;
+      }
+      .category-link {
+        display: block;
+      }
     }
   }
-
   .category-img {
     width: 100%;
     height: 100%;
@@ -70,7 +70,7 @@
     font-weight: 600;
     letter-spacing: 2px;
     text-align: center;
-    color: #ffffff;
+    color: #fff;
     text-transform: uppercase;
     background-color: #31363d;
     padding: 11px 50px;
