--- a/client/src/components/ProductPage/PhotoGallery/photo-gallery.scss
+++ b/client/src/components/ProductPage/PhotoGallery/photo-gallery.scss
@@ -17,6 +17,10 @@
     height: 68px;
     margin: 20px;
 
+    img {
+      @include image;
+    }
+
 
     @include max-width($landscape-tablet) {
       margin-right: 12px;
@@ -42,29 +46,6 @@
   }
 
   .all-photos-item {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    @include image;
   }
 }
-
-.product-details-carousel {
-/*   display: flex;
-  flex-direction: row-reverse; */
-  .slide.selected, .carousel.carousel-slider{
-    width: 450px !important;
-    max-height: 680px;
-    margin: 0 30px;
-  }
-
-/*   .thumbs{
-    display: flex;
-    flex-direction: column;
-  } */
-
-  .carousel{
-    width: auto;
-  }
-}
-
-
