--- a/client/src/components/Subscribe/Subscribe.scss
+++ b/client/src/components/Subscribe/Subscribe.scss
@@ -18,7 +18,7 @@
     color: #31363d;
     margin-right: 24px;
 
-    @include max-width($landscape-tablet){
+    @include max-width($landscape-tablet) {
       margin-right: 0;
       margin-bottom: 10px;
     }
@@ -43,13 +43,12 @@
     max-width: 658px;
     width: 100%;
 
-    @include max-width($landscape-tablet){
+    @include max-width($landscape-tablet) {
       flex-direction: column;
       margin-bottom: 10px;
       justify-content: center;
       align-items: center;
     }
-
   }
 
   &-email {
@@ -62,7 +61,7 @@
     background-color: $grey-light;
     margin-right: 39px;
 
-    @include max-width($landscape-tablet){
+    @include max-width($landscape-tablet) {
       margin-right: 0;
       margin-bottom: 10px;
     }
@@ -74,17 +73,15 @@
     padding: 12px 0;
     border-radius: 100px;
     background-color: $black;
-
     font-family: $font-openSans;
     font-size: 13px;
     font-weight: bold;
     text-align: center;
     letter-spacing: 1.4px;
     text-transform: uppercase;
-    color: #ffffff;
+    color: #fff;
     border: none;
     outline: none;
     cursor: pointer;
-
   }
 }
