--- a/client/src/scss/resources/_mixin.scss
+++ b/client/src/scss/resources/_mixin.scss
@@ -41,8 +41,14 @@
   }
 }
 
-@mixin mobile-min{
-  @media (max-width: #{$landscape-mobile-normal}){
+@mixin image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@mixin mobile-min {
+  @media (max-width: #{$landscape-mobile-normal}) {
     @content;
   }
 }
