--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -183,6 +183,7 @@
       height: 35px;
       width: 150px;
       background-color: #f3f3f3;
+      //background-color: #1faa00;
       text-transform: uppercase;
       text-align: center;
       outline: none;
