--- a/client/src/scss/resources/_base.scss
+++ b/client/src/scss/resources/_base.scss
@@ -5,8 +5,10 @@ body {
 .container {
   max-width: 1200px;
   width: 100%;
-  padding: 0 10px;
-  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .d-flex {
