--- a/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
+++ b/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/resources/resources';
+
 .login-menu {
   display: flex;
   flex-direction: column;
@@ -15,18 +17,32 @@
   border: 1px solid black;
   background-color: #fff;
   color: #030303;
+  border-radius: 4px;
+  @include tablet {
+    width: 400px;
+  }
+  @include mobile-normal {
+    width: 400px;
+  }
+  @include mobile-min {
+    width: 320px
+  }
+
+  &_form-fields {
+
+  }
 
   &_form {
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     //margin-top: 40px;
 
 
-
     &-fields {
       display: block;
-      width: 396px;
+      width: 100%;
     }
 
     //.form-pass_par {
@@ -36,7 +52,13 @@
     //}
   }
 }
-
+.field-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  //width: 80%;
+}
 .login-cancel-btn {
   width: 30px;
   height: 30px;
@@ -74,6 +96,15 @@
   width: 323px;
   height: 22px;
   font-size: 14px;
+  @include tablet{
+    padding: 0 20px;
+  }
+  @include mobile-min{
+    padding: 0 20px;
+  }
+  @include  mobile-normal{
+    padding: 0 20px;
+  }
 }
 
 .login-form-input {
@@ -83,6 +114,15 @@
   padding-left: 10px;
   border: 1px solid #eaeaea;
   outline: none;
+  @include tablet {
+    width: 90%;
+  }
+  @include mobile-normal {
+    width: 90%;
+  }
+  @include mobile-min {
+    width: 90%;
+  }
 }
 
 .login-form_btn {
@@ -122,6 +162,6 @@
   color: #33333a;
 }
 
-.d-none {
-  display: none;
-}
+//.d-none {
+//  display: none;
+//}
