updates in checkout

--- a/client/src/components/Cart/cart.scss
+++ b/client/src/components/Cart/cart.scss
@@ -93,7 +93,10 @@
 }
 
 .basket-final-order {
-  margin-left: 48px;
+  position: fixed;
+  top: 160px;
+  right: 100px;
+  //margin-left: 48px;
   padding: 18px;
   background-color: #fff;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
