--- a/client/src/components/FilteredProductList/Filters/CategoryFilter/category-filter.scss
+++ b/client/src/components/FilteredProductList/Filters/CategoryFilter/category-filter.scss
@@ -14,6 +14,11 @@
   }
 
   .category-list-menu {
+    @include max-width($landscape-tablet){
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
     .category-item {
       padding-left: 20px;
 
