--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -3,6 +3,10 @@
 
 .main-footer {
   background-color: $black;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .footer-list {
@@ -20,6 +24,8 @@
 .footer-column {
   @include max-width($landscape-tablet) {
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -31,11 +37,8 @@
   @include max-width($landscape-tablet) {
     margin-bottom: 15px;
     text-align: center;
-  }
-
-  @include max-width($landscape-tablet) {
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+    flex-direction: row;
   }
 
   &-column {
