--- a/client/src/components/StaticPages/static-pages.scss
+++ b/client/src/components/StaticPages/static-pages.scss
@@ -37,7 +37,7 @@ body {
   }
 
   &-paragraph {
-    padding: 10px;
+    padding-top: 10px;
 
     &:first-child {
       padding-bottom: 25px;
@@ -76,7 +76,7 @@ body {
   &-feedback {
     font-size: 16px;
     text-align: center;
-    max-width: 70%;
+    max-width: 50%;
     padding: 5px;
     margin: 20px auto;
     border: 1px solid $grey-light;
@@ -122,6 +122,7 @@ body {
       font-size: 22px;
       font-weight: bold;
       color: $black;
+      margin-bottom: 16px;
     }
 
     &-location {
