--- a/client/src/components/TopBlockAuth/authorization.scss
+++ b/client/src/components/TopBlockAuth/authorization.scss
@@ -23,7 +23,8 @@
   background-color: #fff;
   border: 1px solid #000;
   border-radius: 3px;
-  padding: 3px;
+  padding: 3px 15px;
+  cursor: pointer;
 }
 
 .header-dropdown-login-details {
@@ -87,7 +88,7 @@
   display: inline-block;
   height: 31px;
   width: 36px;
-  margin-right: 10px;
+  margin-left: 10px;
   cursor: pointer;
 
   &-img {
@@ -96,15 +97,19 @@
 
   &-amount {
     position: absolute;
-    //display: flex;
-    //justify-content: center;
-    //align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-40%, -80%);
-    color: #ff6008;
-    font-size: 18px;
-    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #000;
+    top: -10px;
+    right: -12px;
+    color: $red;
+    font-size: 14px;
+    font-weight: 700;
   }
 }
 
