--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -15,23 +15,9 @@
 @media (max-width: 992px) {
   .header-content {
     padding: 10px 0;
+    justify-content: space-around;
   }
 }
-
-.header-burger-menu {
-  display: none;
-}
-
-@media (max-width: 992px) {
-  .header-burger-menu {
-    display: block;
-    background: url("../../img/burger-menu.png") no-repeat;
-    width: 26px;
-    height: 21px;
-    margin-right: 10px;
-  }
-}
-
 .logo {
   width: 120px;
   height: 22px;
