--- a/client/src/components/StaticPages/static-pages.scss
+++ b/client/src/components/StaticPages/static-pages.scss
@@ -52,6 +52,9 @@ body {
     font-size: 32px;
     margin: 30px 0 8px 0;
     text-align: center;
+    @include max-width($landscape-tablet){
+      margin-top: 70px;
+    }
   }
 
   &-sub-title {
@@ -86,11 +89,7 @@ body {
 
     @include mobile-normal {
       padding-bottom: 10px;
-    }
-
-
-    @include mobile-min {
-      padding-bottom: 10px;
+      max-width: 100%;
     }
   }
 
@@ -182,14 +181,13 @@ body {
 
   &-paragraph {
     color: $black;
-    line-height: 135%;
-    padding: 15px;
-    text-indent: 50px;
+    padding: 15px; 
+    line-height: 28px; 
   }
 }
 
 .list {
-  color: #585757;
+  color: $black;
   list-style-type: decimal;
   padding: 5px 55px;
 
