--- a/client/src/components/FilteredProductList/filteredProductList.scss
+++ b/client/src/components/FilteredProductList/filteredProductList.scss
@@ -20,10 +20,10 @@
    margin-top: 20px;
   }
 
-  .btn-loading-products {
+  .loading-products {
     text-align: center;
 
-    a {
+    &-btn {
       font-family: $font-openSans;
       font-size: 12px;
       font-weight: 600;
@@ -32,6 +32,16 @@
       color: $black;
       text-transform: uppercase;
     }
+
+    //a {
+    //  font-family: $font-openSans;
+    //  font-size: 12px;
+    //  font-weight: 600;
+    //  letter-spacing: 2px;
+    //  text-align: center;
+    //  color: $black;
+    //  text-transform: uppercase;
+    //}
   }
 }
 
