--- a/client/src/components/FilteredProductList/filteredProductList.scss
+++ b/client/src/components/FilteredProductList/filteredProductList.scss
@@ -75,3 +75,12 @@
     transform: translateX(-50%);
   }
 }
+
+//.listing-products div {
+//  display: flex;
+//  flex-wrap: wrap;
+//  justify-content: space-between;
+//  align-items: center;
+//}
+
+
